2004-04-03  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_raw.cc (fhandler_dev_raw::open): Actually use "options".

2004-04-04  Gerd Spalink  <Gerd.Spalink@t-online.de>

	* fhandler_dsp.cc (fhandler_dev_dsp::ioctl): Add implementation
	for ioctl codes SNDCTL_DSP_CHANNELS and SNDCTL_DSP_GETCAPS.

2004-04-03  Christopher Faylor  <cgf@redhat.com>

	* child_info.h (child_info::cygheap_reserve_sz): Rename from
	cygheap_alloc_sz.
	* cygheap.cc: Rename alloc_sz to reserve_sz throughout.

2004-04-03  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler.h (class fhandler_socket): Remove has_been_closed member.
	* fhandler_socket.cc (fhandler_socket::recvfrom): Revert to
	overlapped I/O.
	(fhandler_socket::recvmsg): Ditto.
	(fhandler_socket::sendto): Ditto.
	(fhandler_socket::sendmsg): Ditto.
	* net.cc (wsock_event::prepare): Ditto.
	(wsock_event::wait): Ditto.  Evaluate overlapped result also after
	calling CancelIo (thanks to Patrick Samson <p_samson@yahoo.com>).
	(wsock_event::release): Remove.
	* wsock_event.h: Revert to overlapped I/O.

2004-04-02  Corinna Vinschen  <corinna@vinschen.de>

	* net.cc (wsock_event::release): Use NULL handle in call to
	WSAEventSelect to resolve KB 168349.

2004-04-01  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_socket.cc (fhandler_socket::recvfrom): Rearrange loop
	so that WSARecvFrom is always called before waiting.
	(fhandler_socket::recvmsg): Ditto.

2004-04-01  Corinna Vinschen  <corinna@vinschen.de>

	* net.cc (wsock_event::wait): Make wsa_err an int.  Don't set
	ret to 0 if any error has happened.

2004-04-01  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_socket.cc (fhandler_socket::sendto): Drop out of loop if
	has_been_closed gets set.
	(fhandler_socket::sendmsg): Ditto.
	* net.cc (wsock_event::wait): Don't initialize evts.  Don't try to
	evaluate network events if WSAEnumNetworkEvents fails.
	(wsock_event::release): Save last WSA error and set it again unless
	resetting to blocking socket fails.